# Hackathon_vol.10

./: .gitignore  README.md  constraints.txt  requirements.txt  setup.cfg  setup.py
assets/: adjacency.csv  japan_prefectures.geojson  japan_prefectures_pos.csv  pairs_membership_by_prefecture.csv  prefecture_data.csv  prefecture_data_with_pairs_info.csv
data/data1/: JP-02_青森県.csv  JP-07_福島県.csv  JP-08_茨城県.csv  JP-09_栃木県.csv  JP-13_東京都.csv  JP-14_神奈川県.csv  JP-16_富山県.csv  JP-17_石川県.csv  JP-20_長野県.csv  JP-23_愛知県.csv  JP-24_三重県.csv  JP-28_兵庫県.csv  JP-29_奈良県.csv  JP-30_和歌山県.csv  JP-31_鳥取県.csv  JP-34_広島県.csv  JP-35_山口県.csv  JP-36_徳島県.csv  JP-37_香川県.csv  JP-39_高知県.csv  JP-42_長崎県.csv  JP-45_宮崎県.csv  JP-47_沖縄県.csv
docs/: dev_procedure.md  gitignore.md  path.md  python3_version.md
dynpri/: optim.py  prefecture_data_with_pairs_info_v2.csv
dynrank/: __init__.py  optim.py  path_info.py
experiments/: path_info.py  simulation_v1.py  simulation_v2.py  simulation_v3_toy.py  simulation_v4.py  simulation_v5.py
js/: capture_screenshot.js
notebooks/: composite-bo.ipynb  create_data.ipynb  eda.ipynb  eda2.ipynb  prototype.ipynb  simulation.ipynb  simulation_unknown-gt.ipynb
results/simulation_v1/: month_1.csv  month_10.csv  month_100.csv  month_11.csv  month_12.csv  month_13.csv  month_14.csv  month_15.csv  month_16.csv  month_17.csv  month_18.csv  month_19.csv  (+88 more)
src/: rl.py  utils_simulation.py
test/: data.csv  deck_map.html  gif.py  path_info.py  prefecture_pos.py  screenshot.py  subscriber.py  visualization.py  visualization2.py  visualization4.py  visualize_ratio.py
(+794 files in other folders)
