# metadataセクションではパッケージのメタデータを定義する
# これらの値はpypiで公開した際に表示される。
# なおversion等、一部のキーはディレクティブの指定により外部ファイルから値を取得することができる
# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name = dynrank
version = 0.1.0
url = https://github.com/situmshr/Hackathon_vol.10.git
license = MIT

[options]
packages = dynrank
python_requires = >=3.11


# [options.packages.find]
# include =
#     dynrank
# exclude =
#     tests
#     docs
#     assets
#     experiments
#     js
#     notebooks
#     src
#     venv

[options.package_data]
dynrank = prefecture_data_with_pairs_info_v2.csv


